fixed namedate spacing on mobile

--- a/Sprint-1.3/styles/band-styles.css
+++ b/Sprint-1.3/styles/band-styles.css
@@ -380,9 +380,12 @@ body {
   max-width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
 }
 
 .nameDateDiv {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
